# cwork

./: CMakeLists.txt  README.md  tags
ad_bridge/bridge/test/: CMakeCache.txt  CMakeLists.txt  test_ble_admin_unlock.c  test_ble_admin_unpair.c  test_ble_scan.c  test_decode_base64.c  test_multi_ble_admin_unlock.c
bridge/bridge_main/: CMakeLists.txt  bleData.c  bleData.h  fsm.h  ign.c  ign.cc  ign.h  ign_constants.h  list.h  lock_list.c  lock_list.h  log.c  log.cc  log.h  mqttData.c  mqttData.h  mutex_helper.c  mutex_helper.h  poison.h  sysinfo.c  sysinfo.cc  sysinfo.h  task.c  task.cc  task.h  task_queue.c  task_queue.h  wait_Ble.c
bridge/gattlib/: CMakeLists.txt  gattlib.h
bridge/gattlib/common/: gattlib_common.c  gattlib_eddystone.c  gattlib_internal_defs.h
bridge/gattlib/dbus/: CMakeLists.txt  gattlib.c  gattlib_adapter.c  gattlib_char.c  gattlib_internal.h  gattlib_notification.c
bridge/gattlib/dbus/dbus-bluez-v5.48/: org-bluez-adaptater1.c  org-bluez-adaptater1.h  org-bluez-battery1.c  org-bluez-battery1.h  org-bluez-device1.c  org-bluez-device1.h  org-bluez-gattcharacteristic1.c  org-bluez-gattcharacteristic1.h  org-bluez-gattdescriptor1.c  org-bluez-gattdescriptor1.h  org-bluez-gattservice1.c  org-bluez-gattservice1.h
bridge/test/: AES_CCM.c  CMakeLists.txt  admin_create_pin.c  admin_delete_pin.c  admin_get_battery_level.c  admin_get_lock_status.c  admin_get_logs.c  admin_lock.c  admin_unlock.c  admin_unpair.c  ecdh.c  long_connection.c  pair.c  pairing_fsm.c  red_black_tree.c  scan.c  set_wifi_info.c  test_ble_admin_getlockstatus.c  test_ble_admin_getlogs.c  test_ble_admin_lock.c  test_ble_admin_unlock.c  test_ble_pair.c  test_ble_scan.c  test_multi_ble_admin_unlock.c  wifi_func.c  wifi_pairing.c  wifi_setting.c  write_wifi_info.c
bridge/wifi_service/: CMakeLists.txt  SeWifiInfoRequest.c  SetWifiInfoRequest.c  SetWifiInfoRequest.h  ad.c  ad.h  crypt.c  crypt.cc  crypt.h  fsm1.c  fsm1.h  pairing.c  pairing.h  server.c  set_wifi.cc  set_wifi.h  util.c  wifi_server.c
bridge/wifi_service/gdbus/: mainloop.c  object.c
bridge/wifi_service/igloo/: CMakeLists.txt  igloo.c  igloo.h  serializer.c  test.c
bridge/wifi_service/igloo/cbor/: cbor.h
bridge/wifi_service/igloo/cifra/: chash.h  drbg.c  eax.c  handy.h  modes.c  ocb.c  pbkdf2.c  poly1305.c
bridge/wifi_service/igloo/messages/: AdminConnectionStep1.c  AdminConnectionStep2.c  AdminConnectionStep2.h  AdminConnectionStep3.c  AdminLockRequest.c  AdminLockResponse.c  AdminUnlockRequest.c  AdminUnlockResponse.c  CreatePinRequest.c  CreatePinResponse.c  DeletePinRequest.c  DeletePinResponse.c  DeletePinResponse.h  GetBatteryLevelRequest.c  GetBatteryLevelResponse.c  GetLockStatusRequest.c  GetLockStatusResponse.c  GetLockStatusResponse.h  GetLogsRequest.c  GetLogsResponse.c  GuestConnectionStep1.c  GuestConnectionStep2.c  GuestConnectionStep3.c  GuestConnectionStep4.c  GuestConnectionStep4.h  GuestToken.c  PairingCommit.c  PairingStep1.c  PairingStep2.c  PairingStep2.h  PairingStep3.c  PairingStep4.c  SetTimeRequest.c  SetTimeResponse.c  UnpairRequest.c  UnpairResponse.c
bridge/wifi_service/igloo/nrf_crypto/: app_error.h  app_error_weak.c  app_util.h  app_util_platform.c  app_util_platform.h  assert.c  assert.h  cmsis_gcc.h  mem_manager.c  nrf_assert.c  nrf_crypto_ecdh.c  nrf_crypto_keys.h  nrf_crypto_mem.c  nrf_crypto_rng_vector_generate.c  nrf_crypto_rng_vector_generate.h  nrf_drv_common.c  nrf_drv_common.h  nrf_nvic.h  softdevice_handler.c  softdevice_handler.h  system_nrf52840.c
lg_bridge/src/bridge_function/: CMakeLists.txt  scan.cpp  scan.h  test_bridge.cpp  test_bridge.h  test_lock.cpp
src/: CMakeLists.txt  Makefile  README.md  fsm.c  ign  ign.c  ign.h  list.h  log_ign  task_queue.h  test_list.c  util.h
src/bridge/: CMakeLists.txt
src/bridge/ble/: ble_admin.c  ble_admin.h  ble_discover.c  ble_guest.c  ble_guest.h  ble_operation.c  ble_operation.h  ble_pairing.c  ble_pairing.h  lock.c  lock.h
src/bridge/bridge_main/: CMakeLists.txt  bleData.c  bleData.h  fsm.h  ign.c  ign.h  ign_constants.h  lock_list.c  log.c  log.h  mutex_helper.c  mutex_helper.h  profile.h  sysinfo.h  task.h  task_queue.c  task_queue.h  test_msg_id.cc  thread_helper.c  thread_helper.h  util.h  wait_ble.h
src/bridge/bridge_main/certificate/: ign_service.csr  local.csr  local.key
src/bridge/gattlib/: CMakeLists.txt
src/bridge/gattlib/dbus/: CMakeLists.txt  gattlib_advertisement.c  gattlib_char.c  gattlib_internal.h  gattlib_notification.c  gattlib_stream.c
src/bridge/https_client/: CMakeLists.txt  https.c  https.h
src/bridge/lock/: CMakeLists.txt
src/bridge/lock/cifra/: aes.c  aes.h  ccm.c  chacha20poly1305.c  chash.c  cmac.c  hmac.c  hmac.h  modes.h  norx.h  ocb.c  prp.h  salsa20.h  sha3.c
src/bridge/lock/connection/: admin_connection.c  admin_connection.h  connection_common.c  encryption.c  encryption.h  guest_connection.c  guest_connection.h  pairing_connection.c
src/bridge/lock/messages/: AddCardRequest.c  AddCardRequest.h  AddCardResponse.c  AddCardResponse.h  AddFingerprintRequest.c  AddFingerprintRequest.h  AddFingerprintResponse.c  AddFingerprintResponse.h  AddLockRequest.c  AddLockRequest.h  AddLockResponse.c  AddLockResponse.h  AdminConnectionStep1.c  AdminConnectionStep1.h  AdminConnectionStep3.c  AdminLockRequest.c  AdminLockRequest.h  AdminLockResponse.c  AdminLockResponse.h  AdminUnlockRequest.c  AdminUnlockResponse.c  AdminUnlockResponse.h  (+152 more)
src/bridge/mqtt/: CMakeLists.txt  base64.c  mqtt_constant.h  mqtt_util.c  mqtt_util.h
src/bridge/proto/: ign.options  ign.pb.c  ign.pb.h  ign.proto  pb.h
src/bridge/test/: CMakeLists.txt  admin_create_pin.c  admin_delete_pin.c  admin_get_battery.c  admin_get_lock_status.c  admin_get_logs.c  admin_lock.c  admin_unlock.c  admin_unpair.c  ex.sh  guest_lock.c  guest_unlock.c  multi_admin_unlock.c  pair.c  scan.c  test_ble_admin_unlock.c  test_ble_pair.c  wifi_setting.c  write_wifi_info.c
src/bridge/wifi_service/: CMakeLists.txt  SetWifiInfoRequest.c  SetWifiInfoRequest.h  ad.c  ad.h  crypt.h  fsm1.c  pairing.c  pairing.h  serializer.h  server.c  wifi_server.c
(+267 files in other folders)
