


include_directories(.)

set(ALL_LOCK_HDRS)
set(ALL_LOCK_SRCS)

file(GLOB_RECURSE ALL_CONNECTION_HDRS "connection/*.h")
file(GLOB_RECURSE ALL_CONNECTION_SRCS "connection/*.c")

file(GLOB_RECURSE ALL_CIFRA_HDRS "cifra/*.h")
file(GLOB_RECURSE ALL_CIFRA_SRCS "cifra/*.c")

file(GLOB_RECURSE ALL_EXTERNAL_HDRS "external/*.h")
file(GLOB_RECURSE ALL_EXTERNAL_SRCS "external/*.c")

file(GLOB_RECURSE ALL_MESSAGES_HDRS "messages/*.h")
file(GLOB_RECURSE ALL_MESSAGES_SRCS "messages/*.c")

file(GLOB_RECURSE ALL_ECC_HDRS "micro-ecc/*.h")
file(GLOB_RECURSE ALL_ECC_SRCS "micro-ecc/*.c")

list(APPEND ALL_LOCK_HDRS "${ALL_EXTERNAL_HDRS}")
list(APPEND ALL_LOCK_SRCS "${ALL_EXTERNAL_SRCS}")
list(APPEND ALL_LOCK_HDRS "${ALL_MESSAGES_HDRS}")
list(APPEND ALL_LOCK_SRCS "${ALL_MESSAGES_SRCS}")
list(APPEND ALL_LOCK_HDRS "${ALL_CIFRA_HDRS}")
list(APPEND ALL_LOCK_SRCS "${ALL_CIFRA_SRCS}")
list(APPEND ALL_LOCK_HDRS "${ALL_CONNECTION_HDRS}")
list(APPEND ALL_LOCK_SRCS "${ALL_CONNECTION_SRCS}")
list(APPEND ALL_LOCK_HDRS "${ALL_ECC_HDRS}")
list(APPEND ALL_LOCK_SRCS "${ALL_ECC_SRCS}")

add_library(lock
  ${ALL_LOCK_HDRS} ${ALL_LOCK_SRCS}
)

